# hello-taurpc

./: bindings.ts  bun.lockb  package.json
src/: App.tsx  types.ts  useTauRPC.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
