[package]
name = "hello-taurpc"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Using tauri 2.0.0-beta.12
taurpc = "=0.3.0-alpha.2"

specta = { version = "1.0.5", features = ["export"] }
tokio = { version = "1", features = ["full"] }
